# connections

./: .gitignore  .gitlab-ci.yml  .gitmodules  NEWS  README.md  connections.doap  gnome-connections.doap  meson.build  meson_options.txt
.gitlab/issue_templates/: Bug.md
build-aux/flatpak/: org.gnome.Connections.json  org.gnome.Remote.json
data/: meson.build  org.gnome.Connections.appdata.xml.in  org.gnome.Connections.desktop.in  org.gnome.Connections.gschema.xml  org.gnome.Connections.metainfo.xml.in  org.gnome.Connections.service.in  org.gnome.Connections.xml  org.gnome.Remote.appdata.xml.in  org.gnome.Remote.desktop.in  org.gnome.Remote.gschema.xml
help/: LINGUAS  meson.build
help/C/: connect.page  index.page
help/ca/: ca.po
help/cs/: cs.po
help/da/: da.po
help/de/: de.po
help/en_GB/: en_GB.po
help/es/: es.po
help/eu/: eu.po
help/fr/: fr.po
help/gl/: gl.po
help/hu/: hu.po
help/id/: id.po
help/ko/: ko.po
help/nl/: nl.po
help/pl/: pl.po
help/pt/: pt.po
help/pt_BR/: pt_BR.po
help/ru/: ru.po
help/sl/: sl.po
help/sv/: sv.po
help/tr/: tr.po
help/uk/: uk.po
help/zh_CN/: zh_CN.po
po/: LINGUAS  POTFILES  POTFILES.in  ab.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  he.po  hi.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  ka.po  kab.po  kk.po  ko.po  lt.po  lv.po  meson.build  nb.po  ne.po  nl.po  oc.po  pa.po  (+16 more)
src/: actions-popover.vala  application.vala  assistant.vala  collection-view-child.vala  collection-view.vala  config.vapi  connection.vala  connections.gresource.xml  database.vala  dialogs.vala  display-view.vala  display.vala  empty-view.vala  machine.vala  main.vala  meson.build  notifications.vala  onboarding-dialog-page.vala  onboarding-dialog.vala  preferences-widgets.vala  properties.vala  rdp-connection.vala  rdp-preferences-window.vala  remote.gresource.xml  thumbnailer.vala  topbar.vala  vnc-connection.vala  vnc-display.vala  vnc-preferences-window.vala  vnc-properties-dialog.vala  window.vala
src/ui/: assistant.ui  auth-notification.ui  collection-view-child.ui  collection-view.ui  dialog.ui  display-view.ui  empty-view.ui  notification.ui  onboarding-dialog-page.ui  onboarding-dialog.ui  properties.ui  rdp-preferences.ui  style.css  topbar.ui  vnc-preferences.ui  window.ui
subprojects/: gtk-frdp.wrap
subprojects/gtk-frdp/: gtk-frdp.doap  meson.build  meson_options.txt  org.gnome.GtkFrdpViewer.json
subprojects/gtk-frdp/examples/: gtk-frdp-viewer.c  gtk-frdp-viewer.py  gtk-frdp-viewer.vala  meson.build
subprojects/gtk-frdp/src/: GtkFrdp-0.1.metadata  frdp-display.c  frdp-display.h  frdp-session.c  frdp-session.h  gtk-frdp-version.h.in  gtk-frdp.h  meson.build
